--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+.App .ant-form-item-required {
+  color: #fff;
+  font-size: 16px;
+}
+
+.App section {
+  margin-top: 15px;
+}
